# org-with-f

./: TODO.org  flake.nix  hie.yaml  org-with-f.cabal
src/Org/: Types.hs
src/Org/Parser/: Pass0.hs
src/Orgmode/Internal/: Types.hs
src/Orgmode/Parser/: Internal.hs  Pass0.hs
test/: Main.hs
test/golden-orgs/: simple.org
