cabal-version:      2.4
name:               org-with-f
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         zhujinxuan@gmail.com
author:             Jinxuan Zhu
category:           Parser
homepage:           https://srid.ca/haskell-template

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           Org parser for emacs

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:           shared
  exposed-modules:
    Orgmode.Internal.Types
    Orgmode.Parser.Internal
    Orgmode.Parser.Pass0

  hs-source-dirs:   src
  build-depends:
    , aeson
    , base        >=4     && <5
    , data-fix    >=0.3.0 && <0.4
    , megaparsec
    , relude      >=1.0

  default-language: Haskell2010

test-suite test-parse
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test/
  build-depends:
    , aeson
    , base          >=4     && <5
    , data-fix      >=0.3.0 && <0.4
    , filepath
    , megaparsec
    , org-with-f
    , relude        >=1.0
    , tasty
    , tasty-golden

  ghc-options:    -threaded -Wall
